k3s/apps/paperless/consumer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    component: consumer
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: consumer
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: consumer
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx
          imagePullPolicy: IfNotPresent
          args:
            - /usr/local/bin/python3
            - manage.py
            - document_consumer
          volumeMounts:
            - name: datadir
              mountPath: /data
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: paperless-datadir
