k3s/apps/paperless/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  labels:
    component: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      component: paperless
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        component: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/gunicorn
          args:
            - -c
            - /usr/src/paperless/gunicorn.conf.py
            - paperless.asgi:application
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          startupProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: datadir
              mountPath: /data
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: paperless-datadir
