k3s/apps/paperless/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  ingressClassName: public
  rules:
    - host: paper.risson.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
  tls:
    - hosts:
        - paper.risson.space
      secretName: paperless-tls
